<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/grouping_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_grouping" />

        <Button
            android:id="@+id/roles_and_actions_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_roles_and_actions" />

        <Button
            android:id="@+id/state_changes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_stage_changes" />

        <Button
            android:id="@+id/recycler_view_scrolling_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_recycler_view_scrolling" />

        <Button
            android:id="@+id/recycler_view_focus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_recycler_view_focus" />

    </LinearLayout>

</ScrollView>