<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StateChangesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/roles_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:padding="20dp"
                android:text="@string/button_login" />

            <TextView
                android:id="@+id/login_text_view_as_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@color/colorAccent"
                android:fontFamily="sans-serif-medium"
                android:padding="15dp"
                android:text="@string/button_login"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/login_text_view_as_button_with_role"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@color/colorAccent"
                android:fontFamily="sans-serif-medium"
                android:padding="15dp"
                android:text="@string/button_login"
                android:textAllCaps="true" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/actions_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/default_actions_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:contentDescription="@string/content_description_edit_note"
                android:padding="20dp"
                android:src="@drawable/ic_library_books_black_24dp" />

            <ImageButton
                android:id="@+id/set_actions_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:contentDescription="@string/content_description_edit_note"
                android:padding="20dp"
                android:src="@drawable/ic_library_books_black_24dp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>